--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="data:,">
 
     <title>IR Switch</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../out/bundle.css">
   </head>
 
   <body>
