Basic UI layout is setup through React

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
-
     <title>IR Switch</title>
     <link rel="stylesheet" href="../out/bundle.css">
   </head>
