Completed button styling

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
     <title>IR Switch</title>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="roboto.css">
     <link rel="stylesheet" href="../out/bundle.css">
   </head>
 
